frontend/test/should_pass/pattern_011.grg
pattern Foo
{
	x: Node;
	
	replace bla
	{
	}
}

rule r
{
	x:Node;
	foo:Foo();

	replace
	{
		foo();
	}
}