frontend/test/should_fail/pattern_012.grg
pattern Foo()
{
	x:Node;
	
	return(x);
}
